# astr_plugin_typed_meting

./: .gitattributes  .pre-commit-config.yaml  README.md  _conf_schema.json  cfg.py  main.py  metadata.yaml  pyproject.toml  ty.py  utils.py
.github/workflows/: test.yml
tests/: test_generate_conf_schema.py
tools/: _conf_schema.json-schema.json  check__config_schema.py  check_metadata_schema.py  generate_conf_schema.py  metadata.yaml.json-schema.json
