[project]
name = "astr_plugin_typed_meting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "prek>=0.4.0",
    "pyright>=1.1.409",
    "pyyaml>=6.0.3",
    "ruff>=0.15.13",
]
